--- a/blog-one.html
+++ b/blog-one.html
@@ -14,40 +14,40 @@
     <div class="container container--lg">
         <div class="header__inner">
             <nav class="menu">
-                <a class="logo header__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
+                <a class="logo header__logo" href="./index.html">
+                    <img class="logo__image" width="150" src="images/icons/logo.png" alt="logo Glee">
                 </a>
-                <button class="burger">
+                <button class="burger" type="button">
                     <span class="burger__line"></span>
                 </button>
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <a class="menu__link menu__link--active link clickable" href="#">
+                        <a class="menu__link menu__link--active link clickable" href="./index.html">
                             Home +
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./about_us.html">
                             About
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./products.html">
                             Services
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./products.html">
                             Pages +
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./blog-list.html">
                             News
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./contact.html">
                             Contacts
                         </a>
                     </li>
@@ -60,14 +60,14 @@
                             <use xlink:href="images/sprite.svg#search"></use>
                         </svg>
                     </button>
-                    <a class="circle-btn user-icons__item user-icons__item--like" href="#" type="button">
+                    <a class="circle-btn user-icons__item user-icons__item--like" href="./log-in.html">
                         <span class="sr-only">Go to likes</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#like"></use>
                         </svg>
                         <span class="user-icons__num">0</span>
                     </a>
-                    <a class="circle-btn user-icons__item user-icons__item--basket" href="#" type="button">
+                    <a class="circle-btn user-icons__item user-icons__item--basket" href="./log-in.html">
                         <span class="sr-only">Go to basket</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#basket"></use>
@@ -289,14 +289,20 @@
                             <form class="contact-form" action="#">
                                 <div class="contact-form__box">
                                     <label class="contact-form__label contact__label--user">
-                                        <input class="contact-form__input" placeholder="name" type="text">
+                                        <span class="sr-only">
+                                            Enter your email
+                                        </span>
+                                        <input class="contact-form__input" name="User name" placeholder="name" type="text" required>
                                     </label>
                                     <label class="contact-form__label contact__label--message">
-                                        <input class="contact-form__input" placeholder="email" type="email">
+                                        <span class="sr-only">
+                                            Enter your password
+                                        </span>
+                                        <input class="contact-form__input" name="User email" placeholder="email" type="email" required>
                                     </label>
                                 </div>
                                 <span class="contact-form__textbox">
-                                    <textarea class="contact-form__text" placeholder="comment"></textarea>
+                                    <textarea class="contact-form__text" name="comment" placeholder="comment"></textarea>
                                 </span>
                                 <button class="contact-form__button button" type="submit">
                                     Post Comment
@@ -307,7 +313,7 @@
                     <div class="filter-shop">
                         <div class="filter-shop__item search">
                             <form class="search__form" action="#">
-                                <input class="search__input" type="text">
+                                <input class="search__input" type="text" required>
                                 <button class="search__button" type="button">
                                     <svg>
                                         <use xlink:href="images/sprite.svg#search"></use>
@@ -470,7 +476,7 @@
         <div class="footer__top">
             <div class="footer__column">
                 <a class="logo footer__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.svg" alt="logo Glee">
+                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
                 </a>
                 <address class="footer__contacts">
                     <span class="footer__contact">
