--- a/html/blog-list.html
+++ b/html/blog-list.html
@@ -47,8 +47,8 @@
                         <div class="filter-shop">
                             <div class="filter-shop__item search">
                                 <form class="search__form" action="#">
-                                    <input class="search__input" type="text">
-                                    <button class="search__button" type="button">
+                                    <input class="search__input" type="text" required>
+                                    <button class="search__button" type="submit">
                                         <svg>
                                             <use xlink:href="images/sprite.svg#search"></use>
                                         </svg>
