--- a/html/contact.html
+++ b/html/contact.html
@@ -72,14 +72,14 @@
                     <form class="contact__form contact-form" action="#">
                         <div class="contact-form__box">
                             <label class="contact-form__label contact__label--user">
-                                <input class="contact-form__input" placeholder="name" type="text">
+                                <input class="contact-form__input" name="user name" placeholder="name" type="text" required>
                             </label>
                             <label class="contact-form__label contact__label--message">
-                                <input class="contact-form__input" placeholder="email" type="email">
+                                <input class="contact-form__input" name="user email" placeholder="email" type="email" required>
                             </label>
                         </div>
                         <span class="contact-form__textbox">
-                            <textarea class="contact-form__text" placeholder="message"></textarea>
+                            <textarea class="contact-form__text" name="message" placeholder="message"></textarea>
                         </span>
                         <button class="contact-form__button button" type="submit">
                             send message
