--- a/html/parts/cards/_blog-list-card.html
+++ b/html/parts/cards/_blog-list-card.html
@@ -16,7 +16,7 @@
             </a>
         </div>
     </div>
-    <a class="blog-article__content" href="#">
+    <a class="blog-article__content" href="./blog-one.html">
         <h2 class="blog-article__title">
             Fonsectetur adipisicing  eiusmod 
         </h2>
