--- a/html/parts/cards/_product-card.html
+++ b/html/parts/cards/_product-card.html
@@ -4,7 +4,7 @@
             <img class="product-card__img" src="images/products/item@@number.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
