--- a/html/products.html
+++ b/html/products.html
@@ -154,20 +154,23 @@
                             </li>
                         </ul>
 
-                        <ul class="product-shop__pagination pagination">
-                            <li class="pagination__item">
-                                <a class="pagination__link pagination__link--active" href="#">1</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a class="pagination__link" href="#">2</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a class="pagination__link" href="#">3</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a class="pagination__link" href="#">Next</a>
-                            </li>
-                        </ul>
+
+                        <div class="product-shop__pagination">
+                            <ul class="pagination">
+                                <li class="pagination__item">
+                                    <a class="pagination__link pagination__link--active" href="#">1</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a class="pagination__link" href="#">2</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a class="pagination__link" href="#">3</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a class="pagination__link" href="#">Next</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
