--- a/index.html
+++ b/index.html
@@ -25,40 +25,40 @@
     <div class="container container--lg">
         <div class="header__inner">
             <nav class="menu">
-                <a class="logo header__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
+                <a class="logo header__logo" href="./index.html">
+                    <img class="logo__image" width="150" src="images/icons/logo.png" alt="logo Glee">
                 </a>
-                <button class="burger">
+                <button class="burger" type="button">
                     <span class="burger__line"></span>
                 </button>
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <a class="menu__link menu__link--active link clickable" href="#">
+                        <a class="menu__link menu__link--active link clickable" href="./index.html">
                             Home +
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./about_us.html">
                             About
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./products.html">
                             Services
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./products.html">
                             Pages +
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./blog-list.html">
                             News
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./contact.html">
                             Contacts
                         </a>
                     </li>
@@ -71,14 +71,14 @@
                             <use xlink:href="images/sprite.svg#search"></use>
                         </svg>
                     </button>
-                    <a class="circle-btn user-icons__item user-icons__item--like" href="#" type="button">
+                    <a class="circle-btn user-icons__item user-icons__item--like" href="./log-in.html">
                         <span class="sr-only">Go to likes</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#like"></use>
                         </svg>
                         <span class="user-icons__num">0</span>
                     </a>
-                    <a class="circle-btn user-icons__item user-icons__item--basket" href="#" type="button">
+                    <a class="circle-btn user-icons__item user-icons__item--basket" href="./log-in.html">
                         <span class="sr-only">Go to basket</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#basket"></use>
@@ -280,7 +280,7 @@
             <img class="product-card__img" src="images/products/item1.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -344,7 +344,7 @@
             <img class="product-card__img" src="images/products/item2.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -408,7 +408,7 @@
             <img class="product-card__img" src="images/products/item3.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -472,7 +472,7 @@
             <img class="product-card__img" src="images/products/item4.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -536,7 +536,7 @@
             <img class="product-card__img" src="images/products/item5.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -600,7 +600,7 @@
             <img class="product-card__img" src="images/products/item6.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -664,7 +664,7 @@
             <img class="product-card__img" src="images/products/item7.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -728,7 +728,7 @@
             <img class="product-card__img" src="images/products/item8.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -1103,7 +1103,7 @@
         <div class="footer__top">
             <div class="footer__column">
                 <a class="logo footer__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.svg" alt="logo Glee">
+                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
                 </a>
                 <address class="footer__contacts">
                     <span class="footer__contact">
