--- a/product.html
+++ b/product.html
@@ -14,40 +14,40 @@
     <div class="container container--lg">
         <div class="header__inner">
             <nav class="menu">
-                <a class="logo header__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
+                <a class="logo header__logo" href="./index.html">
+                    <img class="logo__image" width="150" src="images/icons/logo.png" alt="logo Glee">
                 </a>
-                <button class="burger">
+                <button class="burger" type="button">
                     <span class="burger__line"></span>
                 </button>
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <a class="menu__link menu__link--active link clickable" href="#">
+                        <a class="menu__link menu__link--active link clickable" href="./index.html">
                             Home +
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./about_us.html">
                             About
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./products.html">
                             Services
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./products.html">
                             Pages +
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./blog-list.html">
                             News
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./contact.html">
                             Contacts
                         </a>
                     </li>
@@ -60,14 +60,14 @@
                             <use xlink:href="images/sprite.svg#search"></use>
                         </svg>
                     </button>
-                    <a class="circle-btn user-icons__item user-icons__item--like" href="#" type="button">
+                    <a class="circle-btn user-icons__item user-icons__item--like" href="./log-in.html">
                         <span class="sr-only">Go to likes</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#like"></use>
                         </svg>
                         <span class="user-icons__num">0</span>
                     </a>
-                    <a class="circle-btn user-icons__item user-icons__item--basket" href="#" type="button">
+                    <a class="circle-btn user-icons__item user-icons__item--basket" href="./log-in.html">
                         <span class="sr-only">Go to basket</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#basket"></use>
@@ -101,6 +101,9 @@
 
         <section class="product-self">
             <div class="container">
+                <h2 class="product-self__title sr-only">
+                    shop page
+                </h2>
                 <div class="product-self__inner">
                     <div class="product-self__slider">
                         <ul class="product-self__slider-left slider-small">
@@ -223,7 +226,7 @@
             <img class="product-card__img" src="images/products/item1.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -287,7 +290,7 @@
             <img class="product-card__img" src="images/products/item7.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -351,7 +354,7 @@
             <img class="product-card__img" src="images/products/item6.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -415,7 +418,7 @@
             <img class="product-card__img" src="images/products/item2.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -479,7 +482,7 @@
             <img class="product-card__img" src="images/products/item3.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -543,7 +546,7 @@
             <img class="product-card__img" src="images/products/item4.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -607,7 +610,7 @@
             <img class="product-card__img" src="images/products/item5.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -791,7 +794,7 @@
         <div class="footer__top">
             <div class="footer__column">
                 <a class="logo footer__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.svg" alt="logo Glee">
+                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
                 </a>
                 <address class="footer__contacts">
                     <span class="footer__contact">
