--- a/products.html
+++ b/products.html
@@ -14,40 +14,40 @@
     <div class="container container--lg">
         <div class="header__inner">
             <nav class="menu">
-                <a class="logo header__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
+                <a class="logo header__logo" href="./index.html">
+                    <img class="logo__image" width="150" src="images/icons/logo.png" alt="logo Glee">
                 </a>
-                <button class="burger">
+                <button class="burger" type="button">
                     <span class="burger__line"></span>
                 </button>
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <a class="menu__link menu__link--active link clickable" href="#">
+                        <a class="menu__link menu__link--active link clickable" href="./index.html">
                             Home +
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./about_us.html">
                             About
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./products.html">
                             Services
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./products.html">
                             Pages +
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./blog-list.html">
                             News
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link clickable" href="#">
+                        <a class="menu__link link clickable" href="./contact.html">
                             Contacts
                         </a>
                     </li>
@@ -60,14 +60,14 @@
                             <use xlink:href="images/sprite.svg#search"></use>
                         </svg>
                     </button>
-                    <a class="circle-btn user-icons__item user-icons__item--like" href="#" type="button">
+                    <a class="circle-btn user-icons__item user-icons__item--like" href="./log-in.html">
                         <span class="sr-only">Go to likes</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#like"></use>
                         </svg>
                         <span class="user-icons__num">0</span>
                     </a>
-                    <a class="circle-btn user-icons__item user-icons__item--basket" href="#" type="button">
+                    <a class="circle-btn user-icons__item user-icons__item--basket" href="./log-in.html">
                         <span class="sr-only">Go to basket</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#basket"></use>
@@ -273,7 +273,7 @@
             <img class="product-card__img" src="images/products/item1.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -336,7 +336,7 @@
             <img class="product-card__img" src="images/products/item2.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -399,7 +399,7 @@
             <img class="product-card__img" src="images/products/item3.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -462,7 +462,7 @@
             <img class="product-card__img" src="images/products/item4.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -525,7 +525,7 @@
             <img class="product-card__img" src="images/products/item5.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -588,7 +588,7 @@
             <img class="product-card__img" src="images/products/item6.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -651,7 +651,7 @@
             <img class="product-card__img" src="images/products/item7.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -714,7 +714,7 @@
             <img class="product-card__img" src="images/products/item8.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -777,7 +777,7 @@
             <img class="product-card__img" src="images/products/item9.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -840,7 +840,7 @@
             <img class="product-card__img" src="images/products/item10.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -903,7 +903,7 @@
             <img class="product-card__img" src="images/products/item11.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -966,7 +966,7 @@
             <img class="product-card__img" src="images/products/item12.png" alt="Wooden radio">
             <ul class="product-card__list">
                 <li class="product-card__item">
-                    <a class="circle-btn circle-btn--icon" href="#">
+                    <a class="circle-btn circle-btn--icon" href="./product.html">
                         <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
@@ -1024,20 +1024,23 @@
                             </li>
                         </ul>
 
-                        <ul class="product-shop__pagination pagination">
-                            <li class="pagination__item">
-                                <a class="pagination__link pagination__link--active" href="#">1</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a class="pagination__link" href="#">2</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a class="pagination__link" href="#">3</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a class="pagination__link" href="#">Next</a>
-                            </li>
-                        </ul>
+
+                        <div class="product-shop__pagination">
+                            <ul class="pagination">
+                                <li class="pagination__item">
+                                    <a class="pagination__link pagination__link--active" href="#">1</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a class="pagination__link" href="#">2</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a class="pagination__link" href="#">3</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a class="pagination__link" href="#">Next</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1076,7 +1079,7 @@
         <div class="footer__top">
             <div class="footer__column">
                 <a class="logo footer__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.svg" alt="logo Glee">
+                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
                 </a>
                 <address class="footer__contacts">
                     <span class="footer__contact">
